Add queue leave command